# n-user-agent-pool

./: .gitignore  AGENTS.md  LICENSE  README.md  activate  pyproject.toml  requirements.txt  testUserAgentPool.py
core/: __init__.py
core/constant/: chrome_user_agent_pool_constant.py
core/helper/: base64_json_decode_helper.py  dotted_version_format_helper.py  key_val_key_hash_helper.py  logger_config_helper.py  user_agent_format_helper.py
core/proxy/: chrome_for_testing_version_proxy.py  firebase_firestore_history_proxy.py  firebase_realtime_database_history_proxy.py  key_val_store_proxy.py
core/repo/: chrome_user_agent_pool_repo.py  user_agent_history_repo.py
core/service/: chrome_user_agent_pool_error.py  chrome_user_agent_pool_service.py  verbose_chrome_user_agent_pool_service.py
n_user_agent_pool/: __init__.py
prompt/: 0003_release_readiness_and_verbose_discovery.md  0004_senior_repo_security_and_quality_review.md  0005_senior_repo_security_and_quality_review_result.md  0006_configure_firebase_user_agent_history.md  001_create_chrome_user_agent_pool.md  002_add_debug_logging_for_user_agent_pool.md
skill/n-layer-scaffold/: SKILL.md
skill/proxy-example-contract/: SKILL.md
skill/service-boundary-review/: SKILL.md
skill/test-placeholder/: SKILL.md
test/: test_package_import.py  test_user_agent_pool_runner.py
test/constant/: test_chrome_user_agent_pool_constant.py
test/helper/: test_base64_json_decode_helper.py  test_dotted_version_format_helper.py  test_key_val_key_hash_helper.py  test_logger_config_helper.py  test_user_agent_format_helper.py
(+21 files in other folders)
