[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n-user-agent-pool"
version = "1.0.0"
description = "Latest Chrome desktop user-agent pool with Chrome for Testing and optional Keyval persistence."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "n-user-agent-pool contributors"}
]
keywords = ["chrome", "user-agent", "chrome-for-testing", "testing", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/R4Ajeti/n-user-agent-pool"
Repository = "https://github.com/R4Ajeti/n-user-agent-pool"
Issues = "https://github.com/R4Ajeti/n-user-agent-pool/issues"
Changelog = "https://github.com/R4Ajeti/n-user-agent-pool/releases"

[tool.setuptools.packages.find]
include = ["core*"]
